src/objects/One_Id_App_Config_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Connected_App_Provisioning_Name__c</fullName>
        <label>Connected App Provisioning Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_Id_Service_Provider_Config__c</fullName>
        <label>One Id Service Provider Config</label>
        <referenceTo>One_Id_Service_Provider_Config__c</referenceTo>
        <relationshipLabel>One Id App Config Details</relationshipLabel>
        <relationshipName>One_Id_App_Config_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PermissionSet_Provisioning__c</fullName>
        <label>PermissionSet Provisioning</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PermissionSet_SSO__c</fullName>
        <label>PermissionSet SSO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>One Id App Config Detail</label>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>OneId  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>One Id App Config Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>